--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,36 +26,46 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: 1.0.0
 
   #firebase
   firebase_core: 0.7.0
   firebase_auth: 0.20.1
   cloud_firestore: 0.16.0+1
   firebase_storage: 7.0.0
-  
+
   image_picker: 0.6.7+22
-  
-  reactive_forms: ^8.0.3
-  reactive_forms_widgets: ^0.3.1
-  
-  flutter_spinkit: ^4.1.2+1
-  simple_animations: ^1.3.3
-  getwidget: ^1.1.0
-  
-  hive: ^1.4.4+1
-  hive_flutter: ^0.3.1
-  
-  get_it:
-  flutter_hooks:
-  
-  bot_toast: ^3.0.5
-  
+
+  reactive_forms: 8.0.3
+  reactive_forms_widgets: 0.3.1
+
+  flutter_spinkit: 4.1.2+1
+  simple_animations: 1.3.3
+  getwidget: 1.1.0
+  grouped_list: 3.7.1
+  font_awesome_flutter: 8.12.0
+  bubble: 1.1.9+1
+  flutter_staggered_grid_view: 0.3.4
+
+  hive: 1.4.4+1
+  hive_flutter: 0.3.1
+
+  get_it: 5.0.2
+  flutter_hooks: 0.15.0
+
+  bot_toast: 3.0.5
+  cached_network_image: 2.5.1
+
   get:
-  
+  rxdart: 0.25.0
+  dio: 3.0.10
+  permission_handler: 5.1.0+2
+  open_file: 3.0.3
+  path_provider: 1.6.27
+
   # location
-  google_maps_flutter: ^0.5.30
-  google_map_location_picker: ^3.3.4
+  google_maps_flutter: 1.2.0
+  google_map_location_picker: 4.1.5
   flutter_localizations:
     sdk: flutter
 
@@ -65,7 +75,7 @@ dev_dependencies:
 
   build_runner:
   change_app_package_name: 0.1.2
-  flutter_launcher_icons: "^0.8.0"
+  flutter_launcher_icons: "0.8.0"
 
 flutter_icons:
   android: "launcher_icon"
